--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "axios": "^1.3.5",
+    "chart.js": "^4.2.1",
+    "react-chartjs-2": "^5.2.0",
     "react-router-dom": "^6.10.0",
     "sass": "^1.60.0",
     "video.js": "^8.0.4",
