--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.5",
     "chart.js": "^4.2.1",
     "react-chartjs-2": "^5.2.0",
