--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.5",
     "chart.js": "^4.2.1",
+    "jwt-decode": "^3.1.2",
     "react-chartjs-2": "^5.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.10.0",
