--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 JWT_SECRET="my-32-character-ultra-secure-and-ultra-long-secret"
+REACT_APP_SECURE_LOCAL_STORAGE_HASH_KEY="Fb)NgVs)Z7&COC(RjAY~EgR'Q;YlnGFi"
