--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "react-secure-storage": "^1.2.2",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
