fix problem with token add middleware proxy to use api in server in localhost development

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 JWT_SECRET="my-32-character-ultra-secure-and-ultra-long-secret"
 REACT_APP_SECURE_LOCAL_STORAGE_HASH_KEY="Fb)NgVs)Z7&COC(RjAY~EgR'Q;YlnGFi"
+
+#Production => full server
+#localhost => web in localhost + api in localhost
+#development => web in localhost + api in server
+REACT_APP_ENVIRONMENT='production'
