--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.5",
     "chart.js": "^4.2.1",
+    "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.10.0",
