--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.6.1",
+    "antd-img-crop": "^4.12.2",
     "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
