--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "plyr-react": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
