Add password toggle hide/show

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ REACT_APP_SECURE_LOCAL_STORAGE_HASH_KEY="Fb)NgVs)Z7&COC(RjAY~EgR'Q;YlnGFi"
 #Production => full server
 #localhost => web in localhost + api in localhost
 #development => web in localhost + api in server
-REACT_APP_ENVIRONMENT='production'
+REACT_APP_ENVIRONMENT='development'
