--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.1",
     "antd-img-crop": "^4.12.2",
+    "d3": "^7.8.5",
     "date-fns": "^2.30.0",
+    "gsap": "^3.12.1",
     "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
