--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_SECURE_LOCAL_STORAGE_HASH_KEY="Fb)NgVs)Z7&COC(RjAY~EgR'Q;YlnGFi"
+REACT_APP_SECURE_LOCAL_STORAGE_HASH_KEY="itsasecretsentence"
 
 #Production => full server
 #localhost => web in localhost + api in localhost
